# azure-foundry-agent-hands-on

./: .env.example  APPENDIX.md  CURRICULUM_SCENARIO.md  README.md  TROUBLESHOOTING.md  check_env.py  pyproject.toml
Chapter1_Getting_Started/: 1.5_first_openai_call.py  1.6.3.1_role_assignment.py  1.6.4.2_few_shot_code.py  1.6.4.3_cot_example.py  1.6.4.4_mulit_turn.py  1.6.4.5_category_classifier.py  1.6.4.6_prompt_engineering_1.py  1.6.4.7_story_generator.py  1.6.4.8_prompt_engineering_2.py  README.md  _bootstrap.py
Chapter2_Foundry_Fundamentals/: 2.1_check_foundry_settings.py  2.2_foundry_responses_smoke_test.py  2.3_foundry_tracing_smoke_test.py  README.md
Chapter3_Agents_Concepts/: 3.4.2_agent_app.py  3.4.4_agent_with_calculator.py  3.4.5_stateful_agent.py  README.md
Chapter4_Agent_Patterns/: 4.2.1_multi_tool_agent.py  4.3.2_rag_agent.py  4.3.3_advanced_rag_mistral.py  4.4.4.2_advanced_rag_index.py  4.4.4.3_advanced_rag_agent.py  4.4.4.5_advanced_rag_multiQueryRetriever.py  4.4.4.6_multi_tool_agent.py  README.md  company_policy.docx  company_policy.txt
Chapter5_Advanced_Systems/: 5.2.1_multi_agent_system.py  5.3.1_streamlit_app.py  5.3.2_streamlit_chatbot_with_memory.py  README.md
Chapter6_MCP_Protocol/: 6.4.2_mcp_flask_server.py  6.4.3_mcp_client.py  6.6.1_mcp_server_ai_search.py  6.6.2_mcp_client_ai_search.py  README.md
Chapter7_Frontier_of_AI/: 7.3.1_langgraph_interrupt.py  7.4.1_reflection_loop.py  7.6.1_guardrails.py  README.md
Chapter8_Foundry_Agents/: 8.1_create_and_run_foundry_agent.py  8.2_create_foundry_agent_with_knowledge_base.py  README.md  (+2 more)
(+7 files in other folders)
