[project]
name = "foundry-hands-on"
version = "0.1.0"
description = "Microsoft Foundry Agent Hands-on: 6시간 집중 실습 (uv 기반 실행 환경)"
readme = "README.md"
# 실습은 Python 3.11.x를 기준으로 안내합니다. 정확한 인터프리터는 .python-version(3.11.9)으로 고정합니다.
requires-python = ">=3.11,<3.12"

# 이 파일이 의존성의 단일 소스(single source of truth)입니다. uv.lock으로 버전을 고정합니다.
# Application Insights trace exporter 호환을 위해 OpenTelemetry 3종은 정확한 버전으로 고정합니다.
dependencies = [
    "azure-ai-projects>=2.0.0",
    "azure-core>=1.30.0",
    "azure-identity>=1.17.0",
    "azure-monitor-opentelemetry==1.8.1",
    "azure-search-documents>=11.6.0",
    "opentelemetry-api==1.38.0",
    "opentelemetry-sdk==1.38.0",
    "opentelemetry-semantic-conventions==0.59b0",
    "openai>=1.68.0",
    "python-dotenv==1.0.1",
    "pypdf>=5.0.0",
    "streamlit>=1.36.0",
    "flask>=3.0.0",
    "requests>=2.32.0",
    "pydantic==2.8.2",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "azure-identity-broker>=1.3.0",
]

[tool.uv]
# 이 저장소 자체는 빌드/설치 대상이 아닙니다. 실습 스크립트는 _bootstrap.py가 sys.path에
# 저장소 루트를 추가하여 foundry_hands_on 패키지를 소스 그대로 import합니다.
# 따라서 uv는 의존성 환경(.venv)만 관리하고, 저장소를 패키지로 빌드하지 않습니다.
package = false
